dark mode fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
 html {
   font-family: sans-serif;
+  background-color: red;
 }
