--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -9,6 +9,11 @@
   background-color: #181a1b;
 }
 
+.emptyCart-dark {
+  background-color: #303030;
+  color: white;
+}
+
 .cart-table {
   border-right: 1px solid rgba(220, 220, 220, 0.267);
   padding: 2rem;
