--- a/src/components/Orders/Orders.css
+++ b/src/components/Orders/Orders.css
@@ -27,7 +27,3 @@
   background-color: #242424;
   color: white;
 }
-
-.body-container-dark form select:default {
-  background-color: red;
-}
